# aiforgestudio.net

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  README.md  build.bat  build_project.bat  gitignore  main.cpp  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
aiforge-api/: NVIDIA GeForce RTX 5090.json  vp_gpuinfo_nvidia_geforce_rtx_5090_581_80_0_0_windows_11.json  wrangler.toml
aiforge-api/snowy-term-4af8/: package-lock.json  package.json  vitest.config.js  wrangler.jsonc
aiforge-api/src/: wrangler.jsonc
apps/: CMakeLists.txt  main.cpp  main.qml
src/: CMakeLists.txt  index.ts
src/ai/: CMakeLists.txt  OllamaClient.cpp  OllamaClient.h
src/core/: CMakeLists.txt  engine.cpp  engine.h
src/gpu/: CMakeLists.txt  kernels.cu
src/gpu/monitor/: CMakeLists.txt  GPUMonitor.cpp  GPUMonitor.h
src/ui/: CMakeLists.txt  mainwindow.cpp
workers/: package.json  wrangler.toml
workers/src/: index.js
